--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@types/jest": "^28.1.1",
     "@types/node": "^17.0.42",
     "@types/react": "^18.0.12",
+    "@types/react-beautiful-dnd": "^13.1.3",
     "@types/react-dom": "^18.0.5",
     "axios": "^0.26.0",
     "jsmediatags": "^3.9.7",
     "node-sass": "^7.0.1",
     "react": "^17.0.2",
     "react-audio-player": "^0.17.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.0",
@@ -54,7 +56,6 @@
   },
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "index.js",
-  "devDependencies": {},
   "author": "",
   "license": "ISC"
 }
